--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-</head>  
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="js/graph.js"></script>
+  </head>
+  <body>
+    <script type="text/javascript">
+    /*
+      Use D3 to load the loan data
+      
+      var format = d3.time.format("%m/%d/%Y %H:%M")
+      
+      d3.csv("data/prosperLoanData.csv", function(d) {
+        d['BorrowerRate'] = +d['BorrowerRate'];
+        d['StatedMonthlyIncome'] = +d['StatedMonthlyIncome'];
+        d['CreditScoreRangeLower'] = +d['CreditScoreRangeLower'];
+        d['LoanOriginationDate'] = format.parse(d['LoanOriginationDate']);
+        return d;      
+      }, draw);
+      */
+    </script>
+  </body>
 </html>
