Udacity submission revision 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script type="text/javascript" src="js/graph.js"></script>
   </head>
   <body>
-    <script type="text/javascript">
-    </script>
+    <h2>></h2>
   </body>
+  <div class="explanationText">
+  </div>
+   
 </html>
